# paylens

./: .gitignore  GEMINI.md  README.md  Taskfile.yml  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/data/: company_profiles.json  fallback_diagnosis.json  mock_github_carlos.json  peer_benchmarks.json  salary_bands.json  skill_demand.json
backend/models/: schemas.py
backend/prompts/: diagnosis.py  negotiation.py
backend/routers/: diagnosis.py  negotiate.py  profile.py  whatif.py
backend/services/: diagnosis_service.py  github_service.py  llm_service.py  negotiation_service.py  whatif_service.py
frontend/: .dockerignore  Dockerfile  FRONTEND_UX_INTEGRATION_REVIEW.md  README.md  package-lock.json  package.json  palette-typography-preview.html  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/health/: route.ts
frontend/app/negotiate/: page.tsx
frontend/components/dashboard/: AnimatedCounter.tsx  AnimatedSection.tsx  Heatmap.tsx  LearningRoadmap.tsx  OpportunityCards.tsx  RadarChart.tsx  SalaryDiagnosis.tsx  ScoreGauge.tsx  WhatIfSimulator.tsx
frontend/components/entry/: GitHubInput.tsx  ProfileCard.tsx  QuickInputForm.tsx
frontend/components/negotiate/: CompanySelector.tsx  NegotiationChat.tsx  NegotiationReport.tsx
frontend/data/: demo-data.ts
frontend/lib/: api-errors.ts  api.ts  currency.ts  mock-api.ts  schemas.ts  types.ts  use-currency.ts  use-demo-mode.ts
(+14 files in other folders)
